--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:Uj6wqwFebzgmVvKvFuTCHvSwcNIWBWAJ3O7rHTv0B5Q=
 APP_DEBUG=true
 APP_URL=http://localhost
 
